# youtube-channel-scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  .project-env-setting.sh  README.md  env  main.py  pyproject.toml
app/: parser.py  scraper.py
